# Nagaraju

./: README.md  pyproject.toml  requirements.txt
src/roulette_predict/: __init__.py  __main__.py  config_model.py  geometry.py  persistence.py  state.py
src/roulette_predict.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/roulette_predict/capture/: __init__.py  screen.py  worker.py
src/roulette_predict/ui/: ball_pick_overlay.py  calibration_overlay.py  main_window.py  preview_frame.py  screen_ball_pick.py  theme.py
src/roulette_predict/vision/: ball_flow.py  ball_track.py  hsv_mask.py  hsv_sample.py  ocr_spin.py  speed.py  template_digits.py
tests/: MANUAL_CHECKLIST.md  test_ball_flow.py  test_ball_roi_map.py  test_ball_track.py  test_geometry.py  test_hsv_mask.py  test_hsv_sample.py  test_ocr_pick.py  test_preview_speed_overlay.py  test_spin_debouncer.py  test_state.py
