[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "roulette-predict"
version = "0.1.0"
description = "Roulette detection widget (experimental CV / UI)"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "PySide6>=6.6",
    "opencv-python>=4.8",
    "numpy>=1.24",
    "mss>=9.0",
    "pytesseract>=0.3.10",
]

[project.optional-dependencies]
dev = ["pytest>=7.4"]

[project.scripts]
roulette-predict = "roulette_predict.__main__:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
